force-app/main/default/objects/AMS_App_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Days_Before_Oppty_Renewal__c</fullName>
        <defaultValue>&quot;60&quot;</defaultValue>
        <label>Days Before Oppty Renewal</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Post_Oppty_Renewal__c</fullName>
        <defaultValue>&quot;30&quot;</defaultValue>
        <label>Days Post Oppty Renewal</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months_Post_Rating_Class__c</fullName>
        <defaultValue>&quot;7&quot;</defaultValue>
        <label>Months Post Rating Class</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>AMS App Config</label>
</CustomObject>